# termherd

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  clippy.toml  deny.toml  justfile  run.ps1
.github/workflows/: ci.yml  codeql.yml  package.yml  sign-release.yml
brainstorm/: 20260528-project-name.md  20260627-ci-quality-gates.md  20260713-mcp-agent-terminal-interaction.md
crates/app/: Cargo.toml  build.rs
crates/app/icons/: generate.sh  icon.icns
crates/app/proptest-regressions/shell/: terminal.txt
crates/app/src/: capture.rs  collapsed_store.rs  docs.rs  instance.rs  json_store.rs  macos.rs  main.rs  metadata_store.rs  paths.rs  record.rs  record_config.rs  settings.rs  shell.rs  strings.rs  tracing_init.rs  window_config.rs  window_geometry.rs
crates/app/src/mcp/: handler.rs  mod.rs
crates/app/src/shell/: bridge.rs  docs.rs  effects.rs  geometry.rs  ime.rs  input.rs  launch.rs  orchestrate.rs  record.rs  routing.rs  session_ops.rs  streams.rs  terminal.rs  view.rs
crates/app/src/shell/effects/: os.rs
crates/app/src/shell/terminal/: canvas.rs  mod.rs  selection.rs
crates/app/src/shell/view/: doc_editor.rs  mod.rs  modals.rs  sidebar.rs  style.rs  tabs.rs
crates/claude/: Cargo.toml
crates/claude/examples/: browse.rs
crates/claude/src/: derive.rs  digest.rs  jsonl.rs  lib.rs  osc.rs  path.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/: app.txt  docscope.txt
crates/core/src/: app.rs  browser.rs  capture.rs  docscope.rs  keymap.rs  lib.rs  links.rs  metadata.rs  ports.rs  record.rs  snapshot.rs  workspace.rs
crates/core/src/app/: capture.rs  effects.rs  events.rs  metadata.rs  notify.rs  record.rs  session.rs  settings.rs  sidebar.rs  snapshot.rs  tabs.rs  testsupport.rs
crates/core/tests/: tab_number_jump.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/pty/: Cargo.toml
crates/pty/src/: events.rs  grid.rs  input.rs  kill.rs  lib.rs  manager.rs  session.rs  status.rs
crates/scan/: Cargo.toml
crates/scan/src/: cache.rs  derive.rs  lib.rs  repo.rs  walk.rs  watch.rs
docs/: ARCHITECTURE.md  CI.md  PRD.md  ci-gate-map.html  ci-gate-map.md  settings.example.jsonc
docs/adr/: 0001-plans-memory-write-scope.md
docs/background/: README.md
docs/notes/: README.md  event-log.jsonl  issue-100-cmdq-quit.typ  issue-108-capture.md  issue-160-antigravity-scan.md  issue-161-antigravity-codec.md  issue-162-antigravity-launch-ui.md  issue-23-quick-launch.typ  issue-29-os-notifications.typ  issue-53-edit-plans-memory.typ  termherd.model.json
docs/reviews/: code-review-m2.typ
scripts/: check-crate-deps.sh  check-module-boundaries.sh  check-os-cfg-containment.sh  report-file-length.sh
