[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/claude",
    "crates/app",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Bastien Gallay <bastien@gallay.org>"]
publish = false

# Workspace-level defaults. `core` and `claude` tighten clippy to `deny`
# (see Q5 in docs/PRD.md §4); `app` inherits these warns.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
