[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/claude",
    "crates/scan",
    "crates/pty",
    "crates/app",
    "crates/mcp",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["TermHerd contributors"]
repository = "https://github.com/Termherd/termherd"
publish = false

# Workspace-level defaults. `core` and `claude` tighten clippy to `deny`
# (see Q5 in docs/PRD.md §4); `app` inherits these warns.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
# Function length as a proxy for local complexity. The threshold lives in
# clippy.toml (too-many-lines-threshold). `warn` here + CI's `-D warnings`
# makes it blocking in CI while staying a warning during local edits. `core`
# and `claude` carry their own lint tables, so they repeat this line.
too_many_lines = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
