[package]
name = "termherd-app"
version = "0.1.0-prerelease.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "termherd"
path = "src/main.rs"

# The workspace is publish = false (crates.io), but the binary IS shipped
# via dist (GitHub Releases) — opt it in explicitly.
[package.metadata.dist]
dist = true

# Desktop installer bundles (cargo-packager). `dist` (above) ships the bare
# binary + curl|sh / powershell installers for CLI-style installs; this
# produces the *GUI* desktop installers — macOS .app/.dmg, Windows .exe (NSIS),
# Linux .deb/.AppImage — with the app icon and OS integration. Built in CI by
# `.github/workflows/package.yml`. Signing/notarization is deferred (no certs,
# OQ5); unsigned bundles still install with the usual first-launch prompt.
[package.metadata.packager]
product-name = "TermHerd"
identifier = "dev.termherd"
category = "DeveloperTool"
description = "Terminal workspace for Claude Code sessions"
long-description = """
TermHerd is a native, keyboard-driven terminal workspace for managing Claude \
Code sessions — browse, launch, arrange in tabs and splits, monitor status, \
and search, on macOS, Windows and Linux."""
homepage = "https://github.com/Termherd/termherd"
authors = ["TermHerd contributors"]
license-file = "../../LICENSE"
icons = [
    "icons/icon.icns",
    "icons/icon.ico",
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/128x128@2x.png",
    "icons/256x256.png",
    "icons/512x512.png",
]

[package.metadata.packager.macos]
minimum-system-version = "10.15"

# Runtime libraries iced/winit needs on a minimal Debian/Ubuntu install.
[package.metadata.packager.deb]
depends = ["libc6", "libxkbcommon0"]

[dependencies]
termherd-core = { path = "../core" }
termherd-claude = { path = "../claude" }
termherd-scan = { path = "../scan" }
termherd-pty = { path = "../pty" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
single-instance = "0.3"
iced = { version = "0.14", features = ["canvas", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Decode the bundled PNG into the RGBA the iced window icon wants — iced 0.14
# only exposes `from_rgba`, no file decoder.
png = "0.17"
# Desktop notifications to the OS notification centre (#29). Cross-platform:
# mac-notification-sys on macOS, zbus on Linux, WinRT toasts on Windows.
notify-rust = "4"
# Typed save errors for the plans/memory write slice.
thiserror = "2"
gif = "0.14.2"
# Async transport substrate: a tokio runtime hosts the in-process MCP server and
# every bridge round-trip is timeout-bounded (`tokio::time::timeout`) so a slow
# reply can never hang the caller. `net` is added for the loopback listener the
# rmcp Streamable-HTTP server binds; the rest are the runtime, channels, and the
# time driver the timeout needs.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "net",
    "io-util",
] }
# In-process MCP server (the live-bridge gate): the official Model Context
# Protocol Rust SDK carries the wire protocol — JSON-RPC, the initialize
# handshake, tool listing/calls, session management — so the shell never
# hand-rolls it. Apache-2.0 (already allowed by cargo-deny), edition 2024, and
# tokio-native so it reuses the substrate runtime above. Feature-frugal: only
# the server half and its Streamable-HTTP transport, plus the `#[tool]` macros.
rmcp = { version = "2", default-features = false, features = [
    "server",
    "transport-streamable-http-server",
    "macros",
] }
# The `transport-streamable-http-server` feature gives rmcp's request→response
# handler (a `tower` service) but no bound HTTP server — we bring our own so the
# per-session bearer-token check wraps it. hyper (+ hyper-util's tokio glue) is
# the frugal base for that; axum would pull far more. `http`/`http-body-util`/
# `bytes` are already in the tree (rmcp's http stack) — declared here because the
# loopback listener and the 401 path use them directly.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
# Per-session MCP token: a v4 UUID (OS CSPRNG) — never logged, injected into the
# session's mcp config, validated by the loopback server. `uuid` is already in
# the tree (rmcp / notify-rust); this only turns on the `v4` generator.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# Temp dirs for the atomic-write round-trip tests.
tempfile = "3"
# Property-based tests for the wheel scroll accumulator (#98).
proptest = "1"

# AppKit menu surgery to route Cmd+Q through the iced runtime instead of
# AppKit's `terminate:`. Pinned to the exact objc2 versions winit 0.30 already
# builds, so this adds no duplicate native crates to the tree.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = [
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSWindow",
] }
objc2-foundation = { version = "0.2.2", features = ["NSArray"] }

# Monitor geometry for the off-screen window guard. Limited to non-Linux: the
# Linux backend hard-links libxcb, which cuts against the project's
# dlopen-only X11/Wayland policy (and would add a build/.deb dependency). On
# Linux the guard falls back to trusting the saved position (see
# `window_config::current_screens`).
[target.'cfg(not(target_os = "linux"))'.dependencies]
display-info = "0.5.9"

# Embed `icons/icon.ico` into termherd.exe so the executable and its shortcuts
# carry the app icon on Windows. Host-gated: only pulled in (and only run) when
# building on Windows, matching the `#[cfg(windows)]` guard in build.rs.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints]
workspace = true
