[package]
name = "termherd-claude"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
serde_json = "1"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
# Function-length gate (threshold in clippy.toml). Repeated from the workspace
# table because this crate carries its own lint table instead of inheriting.
too_many_lines = "warn"
