[package]
name = "termherd-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
termherd-claude = { path = "../claude" }
thiserror = "2"

[dev-dependencies]
# Property-based tests for the number-row tab bindings (issue #26).
proptest = "1"

# Core is the quality keystone — strict lints (Q5).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
# Function-length gate (threshold in clippy.toml). Repeated from the workspace
# table because this crate carries its own lint table instead of inheriting.
too_many_lines = "warn"
