[package]
name = "termherd-pty"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
alacritty_terminal = "0.26.0"
portable-pty = "0.9.0"
termherd-core = { path = "../core" }
termherd-claude = { path = "../claude" }
tracing = "0.1"

[dev-dependencies]

[lints]
workspace = true
